test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/function_returns_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  (
  identifier(foo)
  (
  void
  )
  )
  [
  const int(3)
  ]
  [
  const int(4)
  ]
  ;
